Fix spacing

--- a/wp-content/themes/wp-rootz/sass/movil.scss
+++ b/wp-content/themes/wp-rootz/sass/movil.scss
@@ -1,6 +1,76 @@
 /* Movil */
 
+@media (min-width: 2000px) {
+	header {
+		height: 1050px;
+		margin-bottom: 50px;
+	}
+}
+
+@media (max-width: 1600px) {
+	header {
+		height: 650px;
+		margin-bottom: 0px;
+	}
+}
+
+@media (max-width: 1300px) {
+	header {
+		height: 550px;
+		margin-bottom: 0px;
+	}
+}
+
+@media (max-width: 1100px) {
+	header {
+		height: 450px;
+		margin-bottom: 0px;
+	}
+}
+
+@media (max-width: 900px) {
+	header {
+		height: 350px;
+		margin-bottom: 0px;
+	}
+}
+
+@media (max-width: 700px) {
+	header {
+		height: 250px;
+		margin-bottom: 50px;
+	}
+}
+
+@media (max-width: 600px) {
+	header {
+		height: 250px;
+		margin-bottom: 50px;
+	}
+	
+	.blog-logo {
+		margin-right: 0;
+		width: 30%;
+		background-color: pink;
+		opacity: .5;
+	}
+	
+	.blog-info {
+		font-size: .7em;
+	}
+	
+	.head-social img {
+		width: 20px;
+		height: 20px;
+	}
+}
+
 @media (max-width: 450px) {
+	header {
+		height: 650px;
+		margin-bottom: 50px;
+	}
+	
 	.blog-header {
 		display: flex;
 		flex-direction: column;
