--- a/wp-content/themes/wp-rootz/sass/style.scss
+++ b/wp-content/themes/wp-rootz/sass/style.scss
@@ -82,6 +82,7 @@ ul, ol {
 
 header {
 	height: 650px;
+	margin-bottom: 70px;
 }
 
 .headers {
